fix: 싱횐처리 로직 변경 및 상환내역 정렬기준 변경
